Fix authentication and exception handling